--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <button id="locate-button" onclick="getLocation()">Use my location</button>
         <div id="your"></div>
     </div>
-
+    
+    <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
